--- a/index.html
+++ b/index.html
@@ -8,21 +8,26 @@
    <title>Foro de opinión</title>
 </head>
 <body>
-
+  <ul class="nav nav-pills nav-justified">
+    <li role="presentation"><a href="#">Temas</a></li>
+    <li role="presentation"><a href="#">Autores</a></li>
+    <li role="presentation"><a href="#">Inicio</a></li>
+  </ul>
+  <img src="img/juanin.jpg">
   <h2>Yo opino</h2>
 <!--BÚSQUEDA-->
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <form class="navbar-form navbar-left" role="search">
+        <form class="navbar-form navbar-left" role="search" id="search-form">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Buscar tema">
+            <input type="search" required class="form-control" placeholder="Buscar tema" id="buscar">
           </div>
-          <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+          <!--<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>-->
           <!--botón que agrega nuevos temas-->
-          <button type="button" class="btn btn-success btn-md" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-plus"></span> Tema</button>
+          <button type="button" class="btn btn-success btn-md" data-toggle="modal" data-target="#myModal" id="botonBusqueda"><span class="glyphicon glyphicon-plus"></span> Tema</button>
           <!--fin botón que agrega nuevos temas-->
-      </form>
+        </form>
       </div>
     </div>
   </div>
