--- a/verTopic.html
+++ b/verTopic.html
@@ -14,7 +14,9 @@
     <a href='verTopic.html?topic_id=2'>Algo asi</a><br/>
     <a href='verTopic.html?topic_id=1'>O asi</a>
     <!-- Borar cuando se entienda como pasar info con topic id-->
-    
+    <div id="detalles">
+      
+    </div>
      <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
 
